2007-04-21  Joshua Sled  <jsled@asynchronous.org>

	* Bug#343795: Be explicit about number of months so auto-decimal-point
	  doesn't bite us.
	  Patch from Jerry Quinn <mailto:jlquinn@optonline.net>.

2007-04-20  Benoit Grégoire <bock@step.polymtl.ca>
	* src/import-export/qif-import/test/Makefile.am: Fix compile 
	problem on Ubuntu.

2007-04-04  Christian Stimming  <stimming@tuhh.de>

	* po/hu.po: Update Hungarian translation by Takó Kornél
	<takokornel@gmail.com> which is now much more proof-read than the
	previous one.

2007-04-03  Christian Stimming  <stimming@tuhh.de>

	* po/uk.po: Almost complete Ukrainian translation by Maxim
	V. Dziumanenko

2007-03-30  Christian Stimming <stimming@tuhh.de>

	* Implement some initial gnc_component_manager registering for the hbci dialogs. Partially fixes bug#409324.

2007-03-30  Andreas Köhler  <andi5.py@gmx.net>
	
	* On creating a new account, do not check account types of children.

	* In that situation, the current accounts type is invalid, so calling
	  xaccAccountTypesCompatible against the chosen type will log an error.
	  Because of the apparent lack of children there is no real problem, so
	  just skip the test.

2007-03-30  Andreas Köhler  <andi5.py@gmx.net>

	* Patch from Mike Alexander to fix a memory leak in the summary bar.
	  #413568.

	* When gnc_main_window_summary_refresh is called to update the
	  summary bar at the bottom of the main window, it gets a GList to
	  manage the various currencies involved.  It never frees this
	  list so each call leaks some memory.

2007-03-30  David Hampton  <hampton@employees.org>

	* Guile 1.8 seems to be pickier about inexact->exact producing integer
	  numbers.

2007-03-30  David Hampton  <hampton@employees.org>

	* When deleting an account, correctly display the new account to which
	  transactions will be moved.

2007-03-30  Andreas Köhler  <andi5.py@gmx.net>

	* Reenable search for Voucher Owner.  Fixes #410511.
